--- a/EasyLearn/UI/Pages/DictionariesPage.xaml
+++ b/EasyLearn/UI/Pages/DictionariesPage.xaml
@@ -20,7 +20,7 @@
                   HorizontalContentAlignment="Left">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Vertical"/>
+                        <WrapPanel Orientation="Horizontal"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
