--- a/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
@@ -13,23 +13,25 @@
     <materialDesign:DialogHost>
 
         <Grid>
-            <Button Height="30" Width="100" Command="{Binding GoBack}">Назад</Button>
+            <Button Height="30" Width="100" VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding GoBack}">Назад</Button>
 
-            <StackPanel>
-                <ItemsControl ItemsSource="{Binding Relations}">
+            <ScrollViewer Margin="120 0 0 0">
+                <ItemsControl ItemsSource="{Binding Relations}" 
+                  VerticalContentAlignment="Top"
+                  HorizontalContentAlignment="Left">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
                 </ItemsControl>
-                <TextBlock Text="{Binding Name}"/>
-                <TextBlock Text="{Binding Description}"/>
-                <TextBlock Text="{Binding UnitType}"></TextBlock>
-            </StackPanel>
-
-
+            </ScrollViewer>
 
             <Button Height="50"
                 Width="50"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Margin="30"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="10 50 0 0"
                 Style="{DynamicResource MaterialDesignFloatingActionButton}"
                 Background="ForestGreen"
                 BorderBrush="ForestGreen"
