--- a/EasyLearn/UI/CustomControls/CommonRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/CommonRelationView.xaml
@@ -6,12 +6,26 @@
              xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <materialDesign:Card Margin="4">
-        <StackPanel>
-            <TextBlock Text="{Binding RussianValue}"/>
-            <TextBlock Text="{Binding EnglishValue}"/>
-            <TextBlock Text="{Binding Comment}"/>
-        </StackPanel>
+             d:DesignHeight="300" d:DesignWidth="300">
+    <materialDesign:Card Margin="4" Height="100" Width="200">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="0.4*"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="0.3*"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0" Grid.Column="0" Style="{DynamicResource MaterialDesignBody2TextBlock}" FontSize="15" Text="{Binding RussianValue}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 5 0 0"/>
+            <TextBlock Grid.Row="0" Grid.Column="2" Style="{DynamicResource MaterialDesignBody2TextBlock}" FontSize="15" Text="{Binding EnglishValue}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0 5 10 0"/>
+
+            <TextBlock FontSize="25" Margin="0 -7 0 0" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="-"/>
+
+            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Comment}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </Grid>
     </materialDesign:Card>
 </UserControl>
