--- a/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
@@ -13,7 +13,8 @@
                             materialDesign:ShadowAssist.ShadowDepth="Depth2"
                             Margin="17 10 0 0"
                             Height="256"
-                            Width="200">
+                            Width="200"
+                            IsFlipped="{Binding IsCardFlipped, Mode=TwoWay}">
 
         <materialDesign:Flipper.FrontContent>
 
@@ -37,7 +38,7 @@
                 </materialDesign:ColorZone>
 
 
-                <!--Кнопка перехода на заднюю сторону карточки (настройки аккаунта)-->
+                <!--Кнопка перехода на заднюю сторону карточки (настройки словаря)-->
                 <Button Style="{DynamicResource MaterialDesignFlatButton}"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
@@ -46,7 +47,7 @@
                         Height="30"
                         Padding="1"
                         Margin="0 6 6 0"
-                        ToolTip="Настройки аккаунта">
+                        ToolTip="Настройки словаря">
 
                     <materialDesign:PackIcon Kind="AccountDetails" 
                                              Width="22" 
@@ -56,9 +57,9 @@
 
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Click">
+                            <i:InvokeCommandAction Command="{Binding FlipBackAllAnotherCardsCommand}"/>
+                            <i:InvokeCommandAction Command="{Binding SetEditFieldsValueCommand}"/>
                             <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-                            <!--<i:InvokeCommandAction Command="{Binding UpdateIntermediatesCommand}"/>
-                            <i:InvokeCommandAction Command="{Binding UpdateGoBackButtonIsEnabledCommand}"/>-->
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
 
@@ -93,6 +94,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="2.4*"/>
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
@@ -112,7 +114,7 @@
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="Click">
                                     <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-                                    <!--<i:InvokeCommandAction Command="{Binding RenameAccountCommand}"/>-->
+                                    <i:InvokeCommandAction Command="{Binding EditVerbPrepositionDictionaryCommand}"/>
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
 
@@ -120,75 +122,50 @@
 
                         <TextBlock Margin="8 0 0 0" 
                                    VerticalAlignment="Center"
-                                   Text="Настройки аккаунта"/>
+                                   Text="Настройки словаря"/>
 
                     </StackPanel>
                 </materialDesign:ColorZone>
 
-                <!--Текстбоксы, изменяющие имя и фамилию аккаунта-->
-                <Grid Grid.Row="1" 
-                      Margin="0 6 0 0" 
-                      HorizontalAlignment="Center" 
-                      VerticalAlignment="Top"
-                      Width="172">
+                <!--Редактировать название словаря-->
+                <TextBox materialDesign:HintAssist.Hint="Название" 
+                         materialDesign:HintAssist.IsFloating="True"
+                         Grid.Row="1"
+                         Margin="0 10 0 0"
+                         Width="172"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Top">
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+                    <TextBox.Text>
+                        <Binding Path="EditNameFieldValue" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                            <Binding.ValidationRules>
+                                <!--<local:NotEmptyValidationRuleForRenameAccountWindow ValidatesOnTargetUpdated="True" />
+                                    <local:MaxSymbolValidationRuleForRenameAccountWindow ValidatesOnTargetUpdated="True"/>-->
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
 
-
-                    <TextBlock Text="{Binding Description}" Style="{DynamicResource MaterialDesignBody2TextBlock}" FontSize="10"/>
-
-                    <!--Текстбокс для изменения имени аккаунта-->
-                    <!--<TextBox materialDesign:HintAssist.Hint="Имя" 
-                             materialDesign:HintAssist.IsFloating="True"
-                             Margin="0 12 0 0">
-
-                        <TextBox.Text>
-                            <Binding Path="IntermediateFirstName" UpdateSourceTrigger="PropertyChanged">
-                                <Binding.ValidationRules>
-                                    <local:NotEmptyValidationRuleForRenameAccountWindow ValidatesOnTargetUpdated="True" />
-                                    <local:MaxSymbolValidationRuleForRenameAccountWindow ValidatesOnTargetUpdated="True"/>
-                                </Binding.ValidationRules>
-                            </Binding>
-                        </TextBox.Text>
-
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="TextChanged">
-                                <i:InvokeCommandAction Command="{Binding UpdateGoBackButtonIsEnabledCommand}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="TextChanged">
+                            <i:InvokeCommandAction Command="{Binding UpdateGoBackButtonIsEnabledCommand}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
 
 
-                    </TextBox>-->
+                </TextBox>
 
-                    <!--Текстбокс для изменения фамилии аккаунта-->
-                    <!--<TextBox Grid.Row="1" 
-                             materialDesign:HintAssist.Hint="Фамилия" 
-                             materialDesign:HintAssist.IsFloating="True"
-                             Margin="0 12 0 0">
+                <!--Редактировать описание словаря-->
+                <TextBox TextWrapping="Wrap"
+                         VerticalAlignment="Stretch"
+                         Width="172"
+                         
+                         VerticalScrollBarVisibility="Auto"
+                         materialDesign:HintAssist.Hint="Описание"
+                         materialDesign:HintAssist.IsFloating="True"
+                         Grid.Row="2"
+                         Text="{Binding EditDescriptionFieldValue}"/>
 
-                        <TextBox.Text>
-                            <Binding Path="IntermediateLastName" UpdateSourceTrigger="PropertyChanged">
-                                <Binding.ValidationRules>
-                                    <local:NotEmptyValidationRuleForRenameAccountWindow ValidatesOnTargetUpdated="True" />
-                                    <local:MaxSymbolValidationRuleForRenameAccountWindow ValidatesOnTargetUpdated="True"/>
-                                </Binding.ValidationRules>
-                            </Binding>
-                        </TextBox.Text>
-
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="TextChanged">
-                                <i:InvokeCommandAction Command="{Binding UpdateGoBackButtonIsEnabledCommand}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-
-                    </TextBox>-->
-
-                </Grid>
-
-                <Grid Grid.Row="2" HorizontalAlignment="Stretch">
+                <Grid Grid.Row="3" HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -202,9 +179,10 @@
                             ToolTip="Удалить"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
-                            Grid.Column="0">
+                            Grid.Column="0"
+                            Margin="3 0 0 0">
 
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="-3 0 0 0">
 
                             <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
@@ -221,9 +199,10 @@
                             Style="{DynamicResource MaterialDesignFlatButton}"
                             ToolTip="Открыть"
                             VerticalAlignment="Center"
-                            Grid.Column="1">
+                            Grid.Column="1"
+                            Margin="0 0 3 0">
 
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="-7 0 0 0">
 
                             <TextBlock Text="Открыть" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             <materialDesign:PackIcon Kind="Pencil" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
