--- a/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditCommonDictionaryPage.xaml
@@ -8,14 +8,186 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="EditListsPage">
+      Title="EditListsPage" Background="#D4FEF1">
 
     <materialDesign:DialogHost>
 
         <Grid>
-            <Button Height="30" Width="100" VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding GoBack}">Назад</Button>
 
-            <ScrollViewer Margin="120 0 0 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.2*"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <materialDesign:Card Margin="6">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="60"/>
+                        <ColumnDefinition Width="140"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Column="0" Height="30" Width="80" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding GoBack}">Назад</Button>
+
+                    <Button Height="30"
+                            Grid.Column="1"
+                            Width="30"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Style="{DynamicResource MaterialDesignFloatingActionButton}"
+                            Background="ForestGreen"
+                            BorderBrush="ForestGreen"
+                            Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
+
+                        <materialDesign:PackIcon Kind="AccountPlus"
+                                         Height="20"
+                                         Width="20"
+                                         Margin="0 0 6 2"/>
+
+
+                        <Button.CommandParameter>
+                            <StackPanel Margin="10 10 10 0">
+
+                                <!--Русский перевод-->
+                                <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
+                                 Width="200" 
+                                 materialDesign:HintAssist.Hint="Русский перевод">
+
+                                    <TextBox.Text>
+                                        <Binding Path="NewRusUnitValue" UpdateSourceTrigger="PropertyChanged">
+                                            <!--<Binding.ValidationRules>
+                                        <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
+                                        <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
+                                    </Binding.ValidationRules>-->
+                                        </Binding>
+                                    </TextBox.Text>
+
+                                    <!--<i:Interaction.Triggers>
+                                <i:EventTrigger EventName="TextChanged">
+                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmButtonIsEnabledCommand}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>-->
+
+                                </TextBox>
+
+                                <!--Типы русского перевода-->
+                                <ComboBox materialDesign:HintAssist.Hint="Тип русского перевода" 
+                                  materialDesign:HintAssist.IsFloating="True"
+                                  MaxDropDownHeight="200"
+                                  Margin="4 4 4 0"
+                                  ItemsSource="{Binding RussianUnitTypes}"
+                                  SelectedItem="{Binding SelectedRussianUnitType, Mode=TwoWay}">
+                                </ComboBox>
+
+                                <!--Английский перевод-->
+                                <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
+                                 Width="200" 
+                                 materialDesign:HintAssist.Hint="Английский перевод">
+
+                                    <TextBox.Text>
+                                        <Binding Path="NewEngUnitValue" UpdateSourceTrigger="PropertyChanged">
+                                            <!--<Binding.ValidationRules>
+                                        <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
+                                        <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
+                                    </Binding.ValidationRules>-->
+                                        </Binding>
+                                    </TextBox.Text>
+
+                                    <!--<i:Interaction.Triggers>
+                                <i:EventTrigger EventName="TextChanged">
+                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmButtonIsEnabledCommand}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>-->
+
+                                </TextBox>
+
+                                <!--Типы английского перевода-->
+                                <ComboBox materialDesign:HintAssist.Hint="Тип английского перевода" 
+                                  materialDesign:HintAssist.IsFloating="True"
+                                  MaxDropDownHeight="200"
+                                  Margin="4 4 4 0"
+                                  ItemsSource="{Binding EnglishUnitTypes}"
+                                  SelectedItem="{Binding SelectedEnglishUnitType, Mode=TwoWay}">
+                                </ComboBox>
+
+                                <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
+                                 Width="200" 
+                                 materialDesign:HintAssist.Hint="Комментарий">
+
+                                    <TextBox.Text>
+                                        <Binding Path="Comment" UpdateSourceTrigger="PropertyChanged">
+                                            <!--<Binding.ValidationRules>
+                                        <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
+                                        <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
+                                    </Binding.ValidationRules>-->
+                                        </Binding>
+                                    </TextBox.Text>
+
+                                    <!--<i:Interaction.Triggers>
+                                <i:EventTrigger EventName="TextChanged">
+                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmButtonIsEnabledCommand}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>-->
+
+                                </TextBox>
+
+                                <!--Кнопки отмены и подтверждения добавления-->
+                                <StackPanel Orientation="Horizontal"
+                                    Margin="0 10 0 0">
+
+                                    <!--Кнопка отмены добавления новой связи-->
+                                    <Button Style="{DynamicResource MaterialDesignFlatButton}" 
+                                    Content="Отмена"
+                                    Margin="6">
+
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="Click">
+                                                <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                                <i:InvokeCommandAction Command="{Binding ClearCreateRelationWindow}"/>
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
+
+                                    </Button>
+
+                                    <!--Кнопка подтверждения добавления новой связи-->
+                                    <Button Style="{DynamicResource MaterialDesignFlatButton}"  
+                                    HorizontalAlignment="Center"
+                                    Content="Добавить"
+                                    Margin="10"
+                                    IsEnabled="{Binding ConfirmNewUserButtonIsEnabled}">
+
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="Click">
+                                                <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                                <i:InvokeCommandAction Command="{Binding CreateNewRelation}"/>
+                                                <i:InvokeCommandAction Command="{Binding ClearCreateRelationWindow}"/>
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
+
+                                    </Button>
+
+                                </StackPanel>
+
+                            </StackPanel>
+
+                        </Button.CommandParameter>
+
+                    </Button>
+
+                    <Button Grid.Column="2" Height="30" Width="120" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding ClearCommonDictionaryCommand}">Удалить всё</Button>
+
+
+
+                </Grid>
+            </materialDesign:Card>
+
+
+
+
+
+
+            <ScrollViewer Grid.Row="1">
                 <ItemsControl ItemsSource="{Binding Relations}" 
                   VerticalContentAlignment="Top"
                   HorizontalContentAlignment="Left">
@@ -27,150 +199,7 @@
                 </ItemsControl>
             </ScrollViewer>
 
-            <Button Height="50"
-                Width="50"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Margin="10 50 0 0"
-                Style="{DynamicResource MaterialDesignFloatingActionButton}"
-                Background="ForestGreen"
-                BorderBrush="ForestGreen"
-                Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
 
-                <materialDesign:PackIcon Kind="AccountPlus"
-                                         Height="30"
-                                         Width="30"
-                                         Margin="0 0 6 2"/>
-
-
-                <Button.CommandParameter>
-                    <StackPanel Margin="10 10 10 0">
-
-                        <!--Русский перевод-->
-                        <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
-                                 Width="200" 
-                                 materialDesign:HintAssist.Hint="Русский перевод">
-
-                            <TextBox.Text>
-                                <Binding Path="NewRusUnitValue" UpdateSourceTrigger="PropertyChanged">
-                                    <!--<Binding.ValidationRules>
-                                        <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
-                                        <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
-                                    </Binding.ValidationRules>-->
-                                </Binding>
-                            </TextBox.Text>
-
-                            <!--<i:Interaction.Triggers>
-                                <i:EventTrigger EventName="TextChanged">
-                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmButtonIsEnabledCommand}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>-->
-
-                        </TextBox>
-
-                        <!--Типы русского перевода-->
-                        <ComboBox materialDesign:HintAssist.Hint="Тип русского перевода" 
-                                  materialDesign:HintAssist.IsFloating="True"
-                                  MaxDropDownHeight="200"
-                                  Margin="4 4 4 0"
-                                  ItemsSource="{Binding RussianUnitTypes}"
-                                  SelectedItem="{Binding SelectedRussianUnitType, Mode=TwoWay}">
-                        </ComboBox>
-
-                        <!--Английский перевод-->
-                        <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
-                                 Width="200" 
-                                 materialDesign:HintAssist.Hint="Английский перевод">
-
-                            <TextBox.Text>
-                                <Binding Path="NewEngUnitValue" UpdateSourceTrigger="PropertyChanged">
-                                    <!--<Binding.ValidationRules>
-                                        <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
-                                        <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
-                                    </Binding.ValidationRules>-->
-                                </Binding>
-                            </TextBox.Text>
-
-                            <!--<i:Interaction.Triggers>
-                                <i:EventTrigger EventName="TextChanged">
-                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmButtonIsEnabledCommand}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>-->
-
-                        </TextBox>
-
-                        <!--Типы английского перевода-->
-                        <ComboBox materialDesign:HintAssist.Hint="Тип английского перевода" 
-                                  materialDesign:HintAssist.IsFloating="True"
-                                  MaxDropDownHeight="200"
-                                  Margin="4 4 4 0"
-                                  ItemsSource="{Binding EnglishUnitTypes}"
-                                  SelectedItem="{Binding SelectedEnglishUnitType, Mode=TwoWay}">
-                        </ComboBox>
-
-                        <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
-                                 Width="200" 
-                                 materialDesign:HintAssist.Hint="Комментарий">
-
-                            <TextBox.Text>
-                                <Binding Path="Comment" UpdateSourceTrigger="PropertyChanged">
-                                    <!--<Binding.ValidationRules>
-                                        <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
-                                        <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
-                                    </Binding.ValidationRules>-->
-                                </Binding>
-                            </TextBox.Text>
-
-                            <!--<i:Interaction.Triggers>
-                                <i:EventTrigger EventName="TextChanged">
-                                    <i:InvokeCommandAction Command="{Binding UpdateConfirmButtonIsEnabledCommand}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>-->
-
-                        </TextBox>
-
-                        <!--Кнопки отмены и подтверждения добавления-->
-                        <StackPanel Orientation="Horizontal"
-                                    Margin="0 10 0 0">
-
-                            <!--Кнопка отмены добавления новой связи-->
-                            <Button Style="{DynamicResource MaterialDesignFlatButton}" 
-                                    Content="Отмена"
-                                    Margin="6">
-
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="Click">
-                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
-                                        <i:InvokeCommandAction Command="{Binding ClearCreateRelationWindow}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-
-                            </Button>
-
-                            <!--Кнопка подтверждения добавления новой связи-->
-                            <Button Style="{DynamicResource MaterialDesignFlatButton}"  
-                                    HorizontalAlignment="Center"
-                                    Content="Добавить"
-                                    Margin="10"
-                                    IsEnabled="{Binding ConfirmNewUserButtonIsEnabled}">
-
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="Click">
-                                        <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
-                                        <i:InvokeCommandAction Command="{Binding CreateNewRelation}"/>
-                                        <i:InvokeCommandAction Command="{Binding ClearCreateRelationWindow}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-
-                            </Button>
-
-                        </StackPanel>
-
-                    </StackPanel>
-
-                </Button.CommandParameter>
-
-            </Button>
 
         </Grid>
     </materialDesign:DialogHost>
